feat: finished review endpoints
